<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="50dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="left"
        android:textSize="17sp"
        android:text="@string/numCompte"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="17sp"
        android:text="@string/numRef"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textSize="17sp"
        android:text="@string/descr"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginTop="80dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_gravity="left"
        android:textSize="17sp"
        android:layout_weight="50"
        android:text="@string/dateOper"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="right"
        android:layout_marginEnd="30dp"
        android:layout_weight="50"
        android:textSize="17dp"
        android:text="@string/dateVal"
        />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textSize="17sp"
        android:text="@string/montant"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textSize="17sp"
        android:text="@string/solde"
        />

</LinearLayout>