<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        />
    <TextView
        android:id="@+id/sFacture"
        android:layout_toRightOf="@id/image"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/facture"
        />
    <TextView
        android:id="@+id/sPrice"
        android:layout_toRightOf="@id/image"
        android:layout_marginLeft="210dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/sPrice"

        />

    <TextView
        android:id="@+id/sdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sPrice"
        android:layout_marginLeft="190dp"
        android:layout_toRightOf="@id/image"
        android:text="@string/sdate"
        android:textColor="@android:color/darker_gray" />
</RelativeLayout>